welcome.lessons.welcome.loopfor.LoopCourseForest.scala.error
Runner:1: error: Missing closing brace `}' assumed here
for (c <- 1 to 7) {
^